k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: jisca-nop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
